--- a/performance-measurements-systic/.vscode/tasks.json
+++ b/performance-measurements-systic/.vscode/tasks.json
@@ -20,6 +20,24 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            /*
+             * This is the release cargo build task,
+             * but we need to provide a label for it,
+             * so we can invoke it from the debug launcher.
+             */
+            "label": "Cargo Build (release)",
+            "type": "process",
+            "command": "cargo",
+            "args": ["build", "--release"],
+            "problemMatcher": [
+                "$rustc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
